--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@ layout: base.html
 title: Használt Autó Fotózás Budapest
 ---
 
+<script src="/assets/js/modal.js" defer></script>
+<script src="/assets/js/typing.js" defer></script>
+<script src="/assets/js/lightbox.js" defer></script>
+
 <main>
 	<header class="section hero">
 		<div class="hero__grid container">
@@ -344,7 +348,3 @@ title: Használt Autó Fotózás Budapest
 		<button class="lightbox__arrow lightbox__arrow--next" aria-label="Next"><i class="fas fa-caret-right"></i></button>
 	</div>
 </div>
-
-<script src="/assets/js/typing.js"></script>
-<script src="/assets/js/lightbox.js"></script>
-<script src="/assets/js/modal.js"></script>
