--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,13 @@ title: Használt Autó Fotózás Budapest
 			<div class="slider">
 				<div class="slide">
 					<figure class="slide__image slide__image--before">
-						<img src="/assets/images/before-giulia.webp" alt="Telefonos kép">
+						<img src="/assets/images/before-giulia.webp" alt="Telefonos kép" width="700" height="467" loading="eager" fetchpriority="high" decoding="async">
 						<figcaption>Telefonos kép</figcaption>
 						<i class="slide__icon fas fa-times-circle text-red"></i>
 					</figure>
 					<i class="slide__arrow fas fa-arrow-down"></i>
 					<figure class="slide__image slide__image--after">
-						<img src="/assets/images/after-giulia.webp" alt="Eladásra optimalizált, profi fotó">
+						<img src="/assets/images/after-giulia.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="eager" fetchpriority="high" decoding="async">
 						<figcaption class="slide__caption slide__caption--after">Eladásra optimalizált, profi fotó</figcaption>
 						<i class="slide__icon fas fa-check-circle text-green"></i>
 					</figure>
@@ -115,7 +115,7 @@ title: Használt Autó Fotózás Budapest
 					<p class="plan__price plan__price--new h1"><ins>29.990 Ft</ins></p>
 					<p class="plan__disclaimer"><strong class="text-light">Neked csak annyit kell tenned, hogy tisztán hozod az autót.</strong> A többit én intézem, egy óra alatt végzünk is bőven.</p>
 				</div>
-				<img class="plan__photo" src="/assets/images/plan-photo.webp" alt="Használt Autó Fotózás">
+				<img class="plan__photo" src="/assets/images/plan-photo.webp" alt="Használt Autó Fotózás" width="" height="" loading="lazy" fetchpriority="low">
 			</article>
 			<p class="for-dealers"><strong>Autókereskedőknek is!</strong><br> Profi fotókkal gyorsabban forog a készlet, erősebb a bizalom, és több autó fotózására mennyiségi kedvezményt adok.</p>
 			<div class="button-and-link">
@@ -130,22 +130,22 @@ title: Használt Autó Fotózás Budapest
 			<h2 class="section__title">Ügyfeleim mondták</h2>
 			<div class="quotes">
 				<article class="quote">
-					<img class="quote__image" src="/assets/images/quote-barni.webp" alt="Kia Ceed SW Használt Autó Fotózás">
+					<img class="quote__image" src="/assets/images/quote-barni.webp" alt="Kia Ceed SW Használt Autó Fotózás" width="100" height="100" loading="lazy" fetchpriority="low">
 					<p class="quote__text">Az autó fotózás után napokon belül el is adtam a kocsit. Roland nélkül szerintem még most is hirdetném.</p>
 					<footer class="quote__footer"><cite class="quote__author">Barni</cite> &mdash; Kia Ceed SW</footer>
 				</article>
 				<article class="quote">
-					<img class="quote__image" src="/assets/images/quote-armin.webp" alt="Opel Corsa-e Használt Autó Fotózás">
+					<img class="quote__image" src="/assets/images/quote-armin.webp" alt="Opel Corsa-e Használt Autó Fotózás" width="100" height="100" loading="lazy" fetchpriority="low">
 					<p class="quote__text">Rugalmas volt az időponttal, pontosan tudta, mitől lesz jó egy autós fotó. A képeket villámgyorsan megkaptam.</p>
 					<footer class="quote__footer"><cite class="quote__author">Ármin</cite> &mdash; Opel Corsa-e</footer>
 				</article>
 				<article class="quote">
-					<img class="quote__image" src="/assets/images/quote-gergo.webp" alt="Ford Transit Használt Autó Fotózás">
+					<img class="quote__image" src="/assets/images/quote-gergo.webp" alt="Ford Transit Használt Autó Fotózás" width="100" height="100" loading="lazy" fetchpriority="low">
 					<p class="quote__text">Nagyon jó volt együtt dolgozni Rolanddal, és a képek magukért beszélnek. Ajánlom meleg szívvel!</p>
 					<footer class="quote__footer"><cite class="quote__author">Gergő</cite> &mdash; Ford Transit</footer>
 				</article>
 				<article class="quote">
-					<img class="quote__image" src="/assets/images/quote-ricsi.webp" alt="Ford Mondeo ST200 Használt Autó Fotózás">
+					<img class="quote__image" src="/assets/images/quote-ricsi.webp" alt="Ford Mondeo ST200 Használt Autó Fotózás" width="100" height="100" loading="lazy" fetchpriority="low">
 					<p class="quote__text">Jó hangulatú fotózás, gyors utómunka és tökéletes fotók! Csak ajánlani tudom!</p>
 					<footer class="quote__footer"><cite class="quote__author">Ricsi</cite> &mdash; Ford Mondeo ST200</footer>
 				</article>
@@ -159,7 +159,7 @@ title: Használt Autó Fotózás Budapest
 					<p>A profi fotó nem csak az autót mutatta meg jobb fényben, hanem Annának is önbizalmat adott. Ez lett a különbség a <em>„jó lenne 900-ért eladni”</em> és az <em>„elkelt 1 millió 1-ért”</em> között.</p>
 				</article>
 				<figure>
-					<img class="case-study__image" src="/assets/images/case-study-proof.webp" alt="Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte." title="Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte.">
+					<img class="case-study__image" src="/assets/images/case-study-proof.webp" alt="Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte." title="Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte." width="580" height="550" loading="lazy" fetchpriority="low">
 					<figcaption>Annával a beszélgetésünk Instagramon</figcaption>
 				</figure>
 			</div>
@@ -175,24 +175,24 @@ title: Használt Autó Fotózás Budapest
 			<h2 class="section__title">Minden <del>autóból</del> <ins>járműből</ins> kihozom a maximumot</h2>
 			<p>Teljesen mindegy, hogy városi kisautód, SUV-d, családi kombid vagy épp az álomautód szeretnél eladni, profi fotókkal mindig könnyebb. A használt autó fotózással az a célom, hogy a hirdetésed kitűnjön, és a vevőd már a képeken beleszeressen a kocsidba. Íme néhány példa a munkáimból.</p>
 			<div class="gallery">
-				<img class="js-lightbox" src="/assets/images/gallery-giulia.webp" data-highres="/assets/images/gallery-giulia.webp" alt="Alfa Romeo Giulia Q4 Veloce" title="Alfa Romeo Giulia Q4 Veloce">
-				<img class="js-lightbox" src="/assets/images/gallery-focus-st.webp" data-highres="/assets/images/gallery-focus-st.webp" alt="Ford Focus ST Kombi" title="Ford Focus ST Kombi">
-				<img class="js-lightbox" src="/assets/images/gallery-a6.webp" data-highres="/assets/images/gallery-a6.webp" alt="Audi A6 Avant" title="Audi A6 Avant">
-				<img class="js-lightbox" src="/assets/images/gallery-ceed.webp" data-highres="/assets/images/gallery-ceed.webp" alt="Kia Ceed SW" title="Kia Ceed SW">
-				<img class="js-lightbox" src="/assets/images/gallery-mondeo-st200.webp" data-highres="/assets/images/gallery-mondeo-st200.webp" alt="Ford Mondeo ST200" title="Ford Mondeo ST200">
-				<img class="js-lightbox" src="/assets/images/gallery-944.webp" data-highres="/assets/images/gallery-944.webp" alt="Porsche 944 S2 Coupé" title="Porsche 944 S2 Coupé">
-				<img class="js-lightbox" src="/assets/images/gallery-corsa.webp" data-highres="/assets/images/gallery-corsa.webp" alt="Opel Corsa-e" title="Opel Corsa-e">
-				<img class="js-lightbox" src="/assets/images/gallery-range-rover.webp" data-highres="/assets/images/gallery-range-rover.webp" alt="Range Rover Sport" title="Range Rover Sport">
-				<img class="js-lightbox" src="/assets/images/gallery-swift.webp" data-highres="/assets/images/gallery-swift.webp" alt="Suzuki Swift" title="Suzuki Swift">
-				<img class="js-lightbox" src="/assets/images/gallery-a45s.webp" data-highres="/assets/images/gallery-a45s.webp" alt="Mercedes-AMG A45 S" title="Mercedes-AMG A45 S">
-				<img class="js-lightbox" src="/assets/images/gallery-megane.webp" data-highres="/assets/images/gallery-megane.webp" alt="Renault Mégane RS" title="Renault Mégane RS">
-				<img class="js-lightbox" src="/assets/images/gallery-corvette.webp" data-highres="/assets/images/gallery-corvette.webp" alt="Chevrolet Corvette C3 Stingray" title="Chevrolet Corvette C3 Stingray">
-				<img class="js-lightbox" src="/assets/images/gallery-m850i.webp" data-highres="/assets/images/gallery-m850i.webp" alt="BMW M850i Gran Coupé" title="BMW M850i Gran Coupé">
-				<img class="js-lightbox" src="/assets/images/gallery-911.webp" data-highres="/assets/images/gallery-911.webp" alt="Porsche 911 Carrera 4S" title="Porsche 911 Carrera 4S">
-				<img class="js-lightbox" src="/assets/images/gallery-octavia.webp" data-highres="/assets/images/gallery-octavia.webp" alt="Skoda Octavia" title="Skoda Octavia">
-				<img class="js-lightbox" src="/assets/images/gallery-318i.webp" data-highres="/assets/images/gallery-318i.webp" alt="BMW 318i" title="BMW 318i">
-				<img class="js-lightbox" src="/assets/images/gallery-ducato-lakoauto.webp" data-highres="/assets/images/gallery-ducato-lakoauto.webp" alt="Fiat Ducato Lakóautó" title="Fiat Ducato Lakóautó">
-				<img class="js-lightbox" src="/assets/images/gallery-5-series.webp" data-highres="/assets/images/gallery-5-series.webp" alt="BMW 5 Series" title="BMW 5 Series">
+				<img class="js-lightbox" src="/assets/images/gallery-giulia.webp" data-highres="/assets/images/gallery-giulia.webp" alt="Alfa Romeo Giulia Q4 Veloce" title="Alfa Romeo Giulia Q4 Veloce" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-focus-st.webp" data-highres="/assets/images/gallery-focus-st.webp" alt="Ford Focus ST Kombi" title="Ford Focus ST Kombi" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-a6.webp" data-highres="/assets/images/gallery-a6.webp" alt="Audi A6 Avant" title="Audi A6 Avant" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-ceed.webp" data-highres="/assets/images/gallery-ceed.webp" alt="Kia Ceed SW" title="Kia Ceed SW" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-mondeo-st200.webp" data-highres="/assets/images/gallery-mondeo-st200.webp" alt="Ford Mondeo ST200" title="Ford Mondeo ST200" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-944.webp" data-highres="/assets/images/gallery-944.webp" alt="Porsche 944 S2 Coupé" title="Porsche 944 S2 Coupé" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-corsa.webp" data-highres="/assets/images/gallery-corsa.webp" alt="Opel Corsa-e" title="Opel Corsa-e" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-range-rover.webp" data-highres="/assets/images/gallery-range-rover.webp" alt="Range Rover Sport" title="Range Rover Sport" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-swift.webp" data-highres="/assets/images/gallery-swift.webp" alt="Suzuki Swift" title="Suzuki Swift" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-a45s.webp" data-highres="/assets/images/gallery-a45s.webp" alt="Mercedes-AMG A45 S" title="Mercedes-AMG A45 S" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-megane.webp" data-highres="/assets/images/gallery-megane.webp" alt="Renault Mégane RS" title="Renault Mégane RS" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-corvette.webp" data-highres="/assets/images/gallery-corvette.webp" alt="Chevrolet Corvette C3 Stingray" title="Chevrolet Corvette C3 Stingray" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-m850i.webp" data-highres="/assets/images/gallery-m850i.webp" alt="BMW M850i Gran Coupé" title="BMW M850i Gran Coupé" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-911.webp" data-highres="/assets/images/gallery-911.webp" alt="Porsche 911 Carrera 4S" title="Porsche 911 Carrera 4S" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-octavia.webp" data-highres="/assets/images/gallery-octavia.webp" alt="Skoda Octavia" title="Skoda Octavia" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-318i.webp" data-highres="/assets/images/gallery-318i.webp" alt="BMW 318i" title="BMW 318i" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-ducato-lakoauto.webp" data-highres="/assets/images/gallery-ducato-lakoauto.webp" alt="Fiat Ducato Lakóautó" title="Fiat Ducato Lakóautó" width="1000" height="667" loading="lazy" fetchpriority="low">
+				<img class="js-lightbox" src="/assets/images/gallery-5-series.webp" data-highres="/assets/images/gallery-5-series.webp" alt="BMW 5 Series" title="BMW 5 Series" width="1000" height="667" loading="lazy" fetchpriority="low">
 			</div>
 			<div class="button-and-link">
 				<a class="btn" href="#kapcsolat">Időpontot foglalok</a>
