--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@ title: Használt Autó Fotózás Budapest
 		<div class="hero__grid container">
 			<article class="hero__text">
 				<h1 class="hero__h1">Használt Autó Fotózás Budapesten</h1>
-				<p class="hero__title hero__title--blink h1">
+				<p class="hero__title h1">
 					<span class="hero__title-text">Add el az autódat</span>
-					<span id="js-benefits" class="hero__highlight"></span>
+					<span id="js-benefits" class="hero__highlight hero__highlight--blink"></span>
 				</p>
 				<ul class="checklist hero__checklist">
 					<li>
