--- a/src/index.html
+++ b/src/index.html
@@ -336,7 +336,7 @@ title: Használt Autó Fotózás Budapest
 	<a class="modal__close" onclick="closeModal()"><i class="fas fa-times"></i></a>
 </dialog>
 
-<div class="lightbox" id="lightbox" hidden>
+<div class="lightbox" id="lightbox">
 	<div class="lightbox__overlay"></div>
 	<div class="lightbox__container">
 		<img class="lightbox__image lightbox__image--prev">
