--- a/src/index.html
+++ b/src/index.html
@@ -318,3 +318,5 @@ title: Használt Autó Fotózás Budapest
 {% include "_includes/partials/lightbox.html" %}
 {% include "_includes/partials/privacy-policy.html" %}
 {% include "_includes/partials/schema-faq.liquid" %}
+{% include "_includes/partials/schema-person.liquid" %}
+{% include "_includes/partials/schema-service.liquid" %}
